<resources>
    <string name="app_name">My money moment</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="addnewincfloatbtn">AddNewIncFloatBtn</string>
    <string name="addnewexpfloatbtn">AddNewExpFloatBtn</string>
    <string name="expense">expense</string>
    <string name="income">income</string>
    <string name="amount">Amount</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="calendar_icon">Calendar icon</string>
    <string name="cancel_btn">Cancel</string>
    <string name="add_btn">Add</string>
    <string name="date_hint">Date</string>
    <string name="amount_hint">Amount</string>
    <string name="name_hint">Type</string>
    <string name="list_btn">list_btn</string>
    <string name="menu_icon">menu_btn</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="delete_all">Delete all</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_loading">LoadingActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="logout">LogOut</string>
    <string name="email">Email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>