<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:background="@drawable/dialog_round_add"
    android:backgroundTint="@color/light_blue"
    android:layout_height="350dp"
    android:padding="8dp">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/name"
        app:srcCompat="@drawable/input_lines_style" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/name"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.052" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/amount"
        app:srcCompat="@drawable/input_lines_style" />


    <EditText
        android:id="@+id/amount"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif"
        android:hint="@string/amount"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/date_text"
        app:srcCompat="@drawable/input_lines_style" />

    <EditText
        android:id="@+id/date_text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif"
        android:hint="@string/date"
        android:inputType="date|text"
        app:layout_constraintTop_toBottomOf="@+id/amount" />

    <ImageButton
        android:id="@+id/calendarBtn"
        android:layout_width="56dp"
        android:layout_height="56dp"

        android:layout_marginEnd="8dp"
        android:background="@drawable/round_style"
        android:contentDescription="@string/calendar_icon"

        android:scaleType="center"
        android:src="@drawable/ic_calendar_foreground"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_text" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="320dp"
        android:layout_height="70dp"
        android:layout_margin="10dp"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="156dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:background="@drawable/round_style_dialog_btn"
            android:text="@string/cancel_btn" />

        <Button
            android:id="@+id/addBtn"
            android:layout_width="156dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:background="@drawable/round_style_dialog_btn"
            android:text="@string/add_btn" />
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>